add search permalink

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
       </div>
     </div>
   </footer>
+  <script type="text/javascript">
+    var initStories = [];
+  </script> 
   <script src="/client.js"></script>
 </body>
 </html>
