--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
         rel="stylesheet">
   <link href="/client.css"
         rel="stylesheet">
+  <link href="/apple-touch-icon.png"
+        rel="apple-touch-icon"
+        sizes="180x180">
+  <link href="/favicon-32x32.png"
+        rel="icon"
+        sizes="32x32"
+        type="image/png">
+  <link href="/favicon-16x16.png"
+        rel="icon"
+        sizes="16x16"
+        type="image/png">
+  <link href="/site.webmanifest"
+        rel="manifest">
+  <link color="#5bbad5"
+        href="/safari-pinned-tab.svg"
+        rel="mask-icon">
+  <meta content="#00aba9"
+        name="msapplication-TileColor">
+  <meta content="#ffffff"
+        name="theme-color">
   <title>Youtoop Guide</title>
 </head>
 <body>
