--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -8,7 +8,7 @@
         http-equiv="X-UA-Compatible">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
-  <link href="/client.css"
+  <link href="/assets/client.css"
         rel="stylesheet">
   <link href="/apple-touch-icon.png"
         rel="apple-touch-icon"
@@ -30,7 +30,7 @@
         name="msapplication-TileColor">
   <meta content="#ffffff"
         name="theme-color">
-  <title>Youtoop Guide</title>
+  <title>x Youtoop Guide x</title>
 </head>
 <body>
   <header>
@@ -83,6 +83,6 @@
   <script type="text/javascript">
     var initStories = [];
   </script> 
-  <script src="/client.js"></script>
+  <script src="/assets/client.js"></script>
 </body>
 </html>
